--- a/_includes/css/base.css
+++ b/_includes/css/base.css
@@ -120,7 +120,7 @@ h1, h3 {
     .content {
         width: 100%;
         position: absolute;
-        top: 60px;
+        top: 44px;
     }
     .blog-body {
         padding: 0px 10px;
