--- a/_includes/css/nav.css
+++ b/_includes/css/nav.css
@@ -70,7 +70,7 @@ nav .button {
     .header {
         position: fixed;
         width: calc(100% - 40px);
-        padding: 10px 20px;
+        padding: 0px 20px;
         top: 0px;
     }
     .title>div {
@@ -86,6 +86,9 @@ nav .button {
     }
     nav {
         margin: 0px;
+    }
+    nav ul {
+        margin: 0px 0px 10px 0px;
     }
     .nav li {
         display: inline-block;
